[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Buttons/normal.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Buttons/hover.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Buttons/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Fonts/font52.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI/PauseScreen.gd" type="Script" id=5]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="PauseScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.0784314 )

[node name="MarginContainer" type="MarginContainer" parent="PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 1080.0
margin_bottom = 215.0
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 384.0
margin_right = 696.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( -459, -100 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Resume"

[node name="HBoxContainer2" type="HBoxContainer" parent="PauseScreen/MarginContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 1080.0
margin_bottom = 300.0
alignment = 1

[node name="Settings" type="Button" parent="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 378.0
margin_right = 702.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Settings"

[node name="HBoxContainer3" type="HBoxContainer" parent="PauseScreen/MarginContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 1080.0
margin_bottom = 385.0
alignment = 1

[node name="Main_Menu" type="Button" parent="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer/ResumeButton" to="PauseScreen" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer2/Settings" to="PauseScreen" method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseScreen/MarginContainer/VBoxContainer/HBoxContainer3/Main_Menu" to="PauseScreen" method="_on_Main_Menu_pressed"]
